--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 branches:
   only:
-    - origin
+    - origin/main
 before_install:
   #- openssl aes-256-cbc -K $encrypted_d62ff51cb74a_key -iv $encrypted_d62ff51cb74a_iv
     -in terraform.json.enc -out terraform.json -d
