--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-   # - GCP_PROJECT_ID=pgr301-exam
+    - project = "terraform-292215"
     - tf_version=0.13.5
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 branches:
