--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 branches:
   only:
-    - master
+    - main
 before_install:
   - openssl aes-256-cbc -K $encrypted_615cf7c1d162_key -iv $encrypted_615cf7c1d162_iv -in pgr301-exam-b0bef1aea48c.json.enc -out pgr301-exam-b0bef1aea48c.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
